zadanie1/css/main.css
/* body */

html, body {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
}

h1 {
  text-transform: uppercase;
  font-size: 7rem;
  line-height: 7rem;
}

h2 {
  text-transform: uppercase;
  font-size: 2.5rem;
  line-height: 4.5rem;
}

h3 {
  font-size: 0.95rem;
  line-height: 1.7rem;
}

h4 {
  font-size: 0.95rem;
  line-height: 1rem;
  font-weight: 900;
  text-transform: uppercase;
}

p {
  font-size: 0.8rem;
  line-height: 1.4rem;
  font-weight: 300;
}

.display_block {
  display: block
}

.bg_darkgray {
  background-color: #282828;
}

.bg_orange {
  background-color: #ff6131;
}

.text_orange {
  color: #ff6131;
}

.text_darkgray {
  color: #282828;
}

.text_thin_100 {
  font-weight: 100;
}

.text_thin_300 {
  font-weight: 300;
}

.text_bold {
  font-weight: 900;
}

/* Navbar */
.navbar-brand {
  font-size: 3rem;
  text-transform: uppercase;
}
.navbar-nav a {
  color: #fff;
  transition: all 0.3s ease;
  font-size: 0.9rem;
  font-weight: 100;
  padding: 0px 0px 0px 3rem !important;
}

.navbar-nav a:hover {
  color: #ff6131;
}

.navbar-toggler-icon {
  font-size: 2rem;
  font-weight: 900;
}

/* Header */

header {
    padding: 3rem 0 7rem;
}

.header_img {
    position: absolute;
    right: 0;
    margin-top: -2rem;
    max-height: 45rem;
}

/* Services */

section {
  padding: 4.5rem 0;
}

.subtitle_margin_top {
  margin-top: -1.5rem;
}

.service_box {
  display: flex;
  align-items: center;
  padding: 2rem 0;
  position: relative;
  text-align: center;
}

.service_box_item {
  text-align: left;
  padding: 0 1.5rem;
}

.service_box_icon {
  width: 45%;
  padding: 2rem 0.5rem;
  text-align: center;
}
.service_box_icon i{
position: relative;
 top: 50%;
 transform: translateY(-50%);
 font-size: 4.3rem;
}

/* RWD */

@media screen and (max-width: 1200px) {
  html, body {
    font-size: 15px;
  }
}

@media screen and (max-width: 922px) {
  html, body {
    font-size: 13px;
  }
}

@media screen and (max-width: 600px) {
  html, body {
    font-size: 12px;
  }
  .header_img {
    display: none;
  }
}

